@@ -87,6 +87,7 @@ a:hover {
     <div id="boxInner">
       <h2>$BANNER$</h2>
       $WELCOMETEXT$
+      <p>$FOOTER$</p>
     </div>
   </div>
 
